[package]
name = "dockery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[dependencies]
clap = { version = "4.4.12", features = ["derive", "cargo"] }
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.23", features = ["blocking", "native-tls"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
